<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

<!--Main window that shows the sets of flashcards the user has-->
    <LinearLayout
        android:id="@+id/main_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empty_set_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:gravity="center"
            android:text="@string/empty_set_string"/>

        <ListView
            android:id="@+id/card_set_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_set_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_set_button"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>

<!--Window for adding sets of flashcards-->
    <LinearLayout
        android:id="@+id/add_set_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_set_name"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_set_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_set_button"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>

<!--Window that shows the cards in a given flashcard set-->
    <LinearLayout
        android:id="@+id/card_set_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empty_card_set_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:gravity="center"
            android:text="@string/empty_card_set_string"/>

        <ListView
            android:id="@+id/card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/new_card_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_card_button"
                android:clickable="true"
                android:focusable="true" />

            <Button
                android:id="@+id/practice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_button"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>

<!--Adds card to a set of flashcards-->
    <LinearLayout
        android:id="@+id/add_card_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_front_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_front"
                android:inputType="text"/>

            <EditText
                android:id="@+id/input_back_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_back"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_card_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_card_button"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>

<!--UI for practicing flashcards in a given set-->
    <LinearLayout
        android:id="@+id/flash_card_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/flashcard_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textSize="12dp"
            android:text="@string/flashcard_hint_string"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/flashcard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40dp"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev_button"
                android:clickable="false"
                android:focusable="false" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</FrameLayout>